(pre) unfinished 13 which adds the /model and the whole new layer of automation to the intelligence layer of koil!